# nemo-extensions

./: .gitignore  README  README.md  Readme.md  build  build-order  buildall  bump-versions  generate_desktop_files  makepot  nemo-extensions.pot  nemo-pastebin_2.4.0_amd64.build  nemo_convert_png.py  setup.py
nemo-creation-date/: meson.build
nemo-creation-date/debian/: changelog  control  copyright  rules
nemo-creation-date/src/: meson.build  nemo-creation-date.c  nemo-creation-date.h  statx.c  statx.h
nemo-dropbox/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  aclocal.m4  autogen.sh  build_dropbox.py  configure  configure.ac  configure.in  docgen.py  dropbox.in  dropbox.txt.in  dropbox_files.sh  meson.build  meson_options.txt  rst2man.py  serializeimages.py
nemo-dropbox/.pc/: applied-patches
nemo-dropbox/data/: Makefile.am  dropbox.desktop  meson.build
nemo-dropbox/debian/: TODO  changelog  control  copyright  nemo-dropbox.dirs  nemo-dropbox.lintian-overrides  nemo-dropbox.postinst  nemo-dropbox.postrm  nemo-dropbox.prerm  rules  watch
nemo-dropbox/src/: Makefile.am  async-io-coroutine.h  dropbox-client-util.c  dropbox-client-util.h  dropbox-client.c  dropbox-client.h  dropbox-command-client.c  dropbox-command-client.h  dropbox.c  g-util.h  meson.build  nemo-dropbox-hooks.c  nemo-dropbox-hooks.h  nemo-dropbox.c  nemo-dropbox.h
nemo-fileroller/: Makefile.am  README  configure  configure.ac  configure.in  meson.build
nemo-fileroller/.deps/: fileroller-module.Plo  nemo-fileroller.Plo
nemo-fileroller/debian/: changelog  control  copyright  rules
nemo-fileroller/src/: Makefile.am  fileroller-module.c  meson.build  nemo-fileroller.c  nemo-fileroller.h
nemo-fits/: README  fits-autostretch.c  fits-autostretch.h  fits-render.c  fits-render.h  fits-thumbnailer.c  meson.build  nemo-fits-extension.c  nemo-fits-extension.h  nemo-fits.c  nemo-fits.h
nemo-fits/debian/: changelog  control  install  rules
nemo-fits/po/: POTFILES  meson.build
nemo-gtkhash/: .gitignore  .project  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  meson.build  meson_options.txt
nemo-gtkhash/data/: Makefile.am  Makefile.in  app.gtkhash.gschema.xml  gtkhash.xml  meson.build
nemo-gtkhash/debian/: changelog  control  copyright  gtkhash-common.--install-disabled  rules  watch
nemo-gtkhash/po/: LINGUAS  POTFILES.in  ar.po  cs.po  de.po  en_GB.po  eo.po  es.po  fr.po  gl.po  gtkhash.pot  hr.po  it.po  ja.po  nl.po  pl.po  pt_BR.po  ru.po  sr.po  sv.po  tr.po  zh_CN.po  zh_TW.po
nemo-gtkhash/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  gui.c  gui.h  hash.c  hash.h  list.c  list.h  main.c  main.h  meson.build  prefs.c  prefs.h
nemo-image-converter/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  meson.build  nemo-image-converter.doap
nemo-image-converter/data/: Makefile.am  Makefile.in  meson.build  nemo-image-resize.ui  nemo-image-rotate.ui
nemo-image-converter/debian/: changelog  control  copyright  rules
nemo-image-converter/po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  bg.po  ca.po  cs.po  de.po  es.po  fi.po  fr.po  he.po  hr.po  it.po  ja.po  meson.build  nl.po  pl.po  pt_BR.po  ru.po  sv.po
nemo-image-converter/src/: Makefile.am  Makefile.in  image-converter.c  meson.build  nemo-image-converter.c  nemo-image-converter.h  nemo-image-resizer.c  nemo-image-resizer.h  nemo-image-rotator.c  nemo-image-rotator.h
nemo-open-terminal/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  nemo-open-terminal.schemas.in
nemo-open-terminal/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  as.po  be.po  be@latin.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ko.po  lt.po  mk.po  ml.po  mr.po  nb.po  ne.po  nl.po  (+22 more)
nemo-open-terminal/src/: Makefile.am  Makefile.in  eel-gnome-extensions.c  eel-gnome-extensions.h  nemo-open-terminal.c  nemo-open-terminal.h  open-terminal.c
nemo-preview/: AUTHORS  COPYING  Makefile.am  README  TODO  aclocal.m4  autogen.sh  configure.ac  meson.build
nemo-preview/config/: config.h.in  ltmain.sh
nemo-preview/data/: Makefile.am  meson.build  org.nemo.Preview.service.in
nemo-preview/debian/: changelog  control  control.in  copyright  rules
nemo-preview/po/: LINGUAS  POTFILES.in  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  lt.po  lv.po  meson.build  ml.po  mr.po  (+25 more)
nemo-preview/src/: Makefile-js.am  Makefile-nemo-preview.am  Makefile.am  main.c  meson.build  nemo-preview.in  org.nemo.Preview.gresource.xml
nemo-python/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  meson.build  meson_options.txt  nemo-python.pc.in
nemo-python/.pc/: applied-patches
nemo-python/debian/: NEWS  README.Debian  changelog  control  control.in  copyright  dirs  install  lintian-overrides  postinst  python-nemo.install  rules
nemo-python/docs/: Makefile.am  (+1 more)
nemo-repairer/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bootstrap.sh  config.h.in  configure  configure.ac  meson.build
nemo-seahorse/: AUTHORS  COPYING  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  config.h.in  configure  configure.ac  meson.build  meson_options.txt
nemo-share/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  configure.in  ltmain.sh  meson.build  meson_options.txt
nemo-wallpaper/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.in
(+1279 files in other folders)
